<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="40dp"
        android:textColor="#ffff5379" />

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/gridLayout"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:id="@+id/relative_1_editText"
            android:layout_row="0"
            android:layout_column="0"
            android:hint="@string/relative_1_editText_hint" />

        <EditText
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:id="@+id/adjective_1_editText"
            android:layout_row="0"
            android:layout_column="1"
            android:hint="@string/adjective_1_editText_hint" />

        <EditText
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:id="@+id/adjective_2_editText"
            android:layout_row="1"
            android:layout_column="0"
            android:hint="@string/adjective_2_editText_hint" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameOfPersonInRoom_editText"
            android:layout_row="1"
            android:layout_column="1"
            android:hint="@string/nameOfPersonInRoom_editText_hint" />

        <EditText
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:id="@+id/adjective_3_editText"
            android:layout_row="2"
            android:layout_column="0"
            android:hint="@string/adjective_3_editText_hint" />

        <EditText
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:id="@+id/verbEndingED_editText"
            android:layout_row="2"
            android:layout_column="1"
            android:hint="@string/verbEndingED_editText_hint" />

        <EditText
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:id="@+id/bodyPart_editText"
            android:layout_row="3"
            android:layout_column="0"
            android:hint="@string/bodyPart_editText_hint" />

        <EditText
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:id="@+id/verbEndingING_editText"
            android:layout_row="3"
            android:layout_column="1"
            android:hint="@string/verbEndingING_editText_hint" />

        <EditText
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:id="@+id/relative_2_editText"
            android:layout_row="4"
            android:layout_column="0"
            android:hint="@string/relative_2_editText_hint" />

        <EditText
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:id="@+id/name_editText"
            android:layout_row="4"
            android:layout_column="1"
            android:hint="@string/name_editText_hint" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:text="@string/showMe_button"
            android:id="@+id/showMe_button"
            android:layout_below="@+id/gridLayout"
            android:layout_centerHorizontal="true"
            android:layout_row="5"
            android:layout_column="0"
            android:enabled="false"/>
    </GridLayout>

</RelativeLayout>
